update gradle wrapper & dependencies