@@ -1,15 +1,52 @@
 apply plugin: 'java'
 
-sourceCompatibility = 1.7
-version = '1.0'
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compile 'joda-time:joda-time:2.7'
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.mockito:mockito-core:1.10.19'
+
+    def junit4Version = "4.13.1"
+    def junitVintageVersion = "5.7.0"
+    def junitJupiterVersion = "5.7.0"
+    def junitPlatformVersion = "1.7.0"
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}")
+    testImplementation("junit:junit:${junit4Version}")
+
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
+    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:${junitVintageVersion}") {
+        because "allows JUnit 3 and JUnit 4 tests to run"
+    }
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:${junitPlatformVersion}") {
+        because "allows tests to run from IDEs that bundle older version of launcher"
+    }
+
+    testImplementation("org.assertj:assertj-core:3.17.2")
+
+    def mockitoVersion = "3.5.15"
+    testImplementation("org.mockito:mockito-core:${mockitoVersion}")
+    testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
+
     testCompile 'org.hamcrest:hamcrest-core:1.3'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    //options.compilerArgs.add("-Xlint:all")
+    options.compilerArgs.add("--enable-preview")
+
+    options.incremental = true
+}
+
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "skipped", "failed"
+        exceptionFormat "full"
+    }
+    jvmArgs("--enable-preview")
 }
